# secudp

./: CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  UpgradeLog.htm  callbacks.c  compress.c  compress.lo  config.status  configure  configure.ac  crypto.c  crypto.lo  host.c  host.lo  libsecudp.la  libtool  list.c  packet.c  packet.lo  peer.c  peer.lo  premake4.lua  protocol.c  secudp.dsp  secudp.pc  secudp.pc.in  secudp.sln  secudp.vcxproj  secudp.vcxproj.filters  secudp_dll.cbp  unix.c  unix.lo  win32.c  win32.lo
.deps/: callbacks.Plo  compress.Plo  crypto.Plo  host.Plo  list.Plo  packet.Plo  peer.Plo  protocol.Plo  unix.Plo
.libs/: libsecudp.la  libsecudp.lai  libsecudp.so.7.0.4
Debug/: secudp.lib  secudp.vcxproj.FileListAbsolute.txt
Debug/secudp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  secudp.write.1u.tlog
SecUdp/: SecUdp.c  SecUdp.h  a.out
autom4te.cache/: output.1  requests  traces.0  traces.1
include/SecUdp/: SecUdp.h  protocol.h  unix.h  win32.h
include/secudp/: callbacks.h  crypto.h  list.h  protocol.h  secudp.h  time.h  types.h  utility.h
libsodium/: libsodium.vcxproj
